syntax = "proto3";

package game_engine;

import "protos/world_gen/world_gen.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/yuv418/cs553project/backend/protos/game_engine";

enum Key {
    SPACE = 0;
}

message GameEngineInputReq {
    string game_id = 2;
    Key key = 3;
}

message GameEngineStartReq {
    string game_id = 2;
    int32 viewport_width = 3;
    int32 viewport_height = 4;
    world_gen.WorldGenerated world = 5;
}

// Won't do anything on failure other than reject the requests.
service GameEngineService {
    rpc HandleInput(GameEngineInputReq) returns (google.protobuf.Empty) {};
    rpc StartGame(GameEngineStartReq) returns (google.protobuf.Empty) {};
}
